base/01-intern/04-netview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netview-deploy
  namespace: netview
  labels:
    environment: intern
    app: netview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netview
  template:
    metadata:
      labels:
        app: netview
    spec:
      containers:
        - name: netview
          image: crisu1710/netview
          ports:
            - containerPort: 5000
              name: web
            - containerPort: 3000
              name: api
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
