base/01-intern/04-netview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netview-service
  namespace: netview
  labels:
    environment: intern
    app: netview
spec:
  selector:
    app: netview
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 8200
      name: ui
    - targetPort: 8090
      port: 8090
      name: api
